# naught

./: CMakeLists.txt  README.md
forge/: CMakeLists.txt
forge/ext/vkma/lib/: vkma.cpp
forge/include/forge/: types.hpp
forge/include/forge/buf/: buffer.hpp  ib.hpp  ub.hpp  vb.hpp
forge/include/forge/cmd/: buffer.hpp  manager.hpp  pool.hpp
forge/include/forge/dev/: context.hpp  surface.hpp
forge/include/forge/render/: framebuffer.hpp  renderpass.hpp
forge/include/forge/swapchain/: swapchain.hpp
forge/include/forge/sync/: barrier.hpp  fence.hpp  semaphore.hpp  sync.hpp
forge/lib/buf/: buffer.cpp  ib.cpp  ub.cpp  vb.cpp
forge/lib/cmd/: buffer.cpp  manager.cpp  pool.cpp
forge/lib/dev/: context.cpp  surface.cpp
forge/lib/render/: framebuffer.cpp  renderpass.cpp
forge/lib/swapchain/: swapchain.cpp
forge/lib/sync/: barrier.cpp  fence.cpp  semaphore.cpp
forge/tests/: barrier.cpp  buffer.cpp  context.cpp  fence.cpp  semaphore.cpp
forge/tests/buf/: buffer.cpp
forge/tests/cmd/: cmd.cpp
forge/tests/sync/: fence.cpp  semaphore.cpp
naught/: CMakeLists.txt
naught/drivers/: main.cpp
naught/ext/vkma/include/vkma/: vkma.hpp
naught/include/naught/: types.hpp  view.hpp  window.hpp
naught/include/naught/forge/: buffer.hpp  context.hpp  ib.hpp  surface.hpp  swapchain.hpp  ub.hpp  vb.hpp
naught/include/naught/host/: app.hpp  input.hpp  key.hpp  window.hpp
naught/lib/forge/: buffer.cpp  context.cpp  ib.cpp  surface.cpp  swapchain.cpp  ub.cpp  vb.cpp
naught/lib/host/macos/: app.mm  input.mm  view.mm  window.mm
naught/lib/os/macos/: app.mm  view.mm  window.mm
ncs/: CMakeLists.txt
ncs/benches/: nooptimize.cpp  optimize.cpp
ncs/docs/: archetype.md  cmm.md  entity_lifecycle.md  intro.md  known_issues.md  query.md
ncs/include/ncs/: types.hpp
ncs/include/ncs/archetype/: archetypes.hpp
ncs/include/ncs/base/: utils.hpp
ncs/include/ncs/storage/: column.hpp
ncs/include/ncs/world/: world.hpp
ncs/lib/archetype/: archetypes.cpp
ncs/lib/base/: utils.cpp
ncs/lib/storage/: column.cpp
ncs/lib/world/: world.cpp
ncs/tests/: archetype.cpp  crud.cpp  lifecycle.cpp  query.cpp
necs/: CMakeLists.txt
necs/benches/: bench.cpp  nooptimize.cpp  optimize.cpp
necs/include/necs/: archetypes.hpp  column.hpp  types.hpp  utils.hpp  world.hpp
necs/lib/: archetypes.cpp  column.cpp  utils.cpp  world.cpp
necs/tests/: archetype.cpp  crud.cpp  lifecycle.cpp  query.cpp
